--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,19 @@ code {
     monospace;
 }
 
+h1,h2,h3,h4,h5,h6,
+h1+h2,h1+h3,h1+h4,h1+h5,h1+h6,
+h2+h3,h2+h4,h2+h5,h2+h6,
+h3+h4,h3+h5,h3+h6,
+h4+h5,h4+h6,
+h5+h6,p, li{
+  margin: 0;
+  padding: 0;
+}
+
+ol, ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
