完善表单页面

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,9 +1,11 @@
 :local(.mainWrapper) {
   display: flex;
   flex-direction: column;
+  height: 100%;
 }
 
 :local(.contentWrapper) {
   display: flex;
   flex-grow: 1;
+  height: 100%;
 }
