--- a/src/components/form/styles.css
+++ b/src/components/form/styles.css
@@ -1,8 +1,17 @@
 :local(.formWrapper) {
   display: flex;
-  flex-wrap: wrap;
-  /* height: 100%; */ 
+  flex-direction: column;
+  height: 100%; 
   /* flex 布局与高度有关系 */
+}
+
+:local(.firstPart) {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 20px;
+  margin-bottom: 0px;
+  padding-bottom: 30px;
+  border-bottom: 1px solid #ccc;
 }
 
 :local(.formItem) {
@@ -11,10 +20,32 @@
   padding: 20px 0;
   padding-left: 20px;
 }
+
 :local(.formItem label) {
-  min-width: 100px;
-  /* text-align: right; */
+  min-width: 70px;
 }
+
 :local(.inputItem) {
   width: 200px;
+}
+
+:local(.secondPart) {
+  display: flex;
+  flex-grow: 1;
+  margin: 5px 0;
+}
+
+:local(.formLeft) {
+  display: flex;
+  flex-grow: 1;
+  border-right: 1px solid #ccc;
+  justify-content: center;
+  align-items: center;
+}
+
+:local(.formRight) {
+  display: flex;
+  flex-grow: 1;
+  justify-content: center;
+  align-items: center;
 }
