--- a/src/components/table/styles.css
+++ b/src/components/table/styles.css
@@ -4,3 +4,11 @@
   align-items: center;
   height: 100%;
 }
+
+:global(#components-table-demo-drag-sorting tr.drop-over-downward td) {
+  border-bottom: 2px dashed #1890ff;
+}
+
+:global(#components-table-demo-drag-sorting tr.drop-over-upward td) {
+  border-top: 2px dashed #1890ff;
+}
